--- a/bibliografija.bib
+++ b/bibliografija.bib
@@ -14,6 +14,7 @@
 
 @article{ongaro_consensus,
 	title = {Consensus: Bridging Theory and Practice},
+    date = {2014},
 	pages = {258},
 	author = {Ongaro, Diego},
 	langid = {english},
